# epubOCR

./: .gitignore  CLAUDE.md  Field Overview.md  README.md  comparison.md  config.toml  epubOCR.md  pyproject.toml
epubocr/: __init__.py  assemble.py  cli.py  config.py  consensus.py  ingest.py  ingest_pdf.py  layout.py  pipeline.py  preprocess.py  storage.py  structure.py  validate.py
epubocr/eval/: __init__.py  harness.py  metrics.py
epubocr/llm/: __init__.py  cleanup.py  client.py  fidelity_verifier.py
epubocr/ocr/: __init__.py  base.py  paddle.py  surya2.py  surya_marker.py  tesseract.py  vlm_openai.py
scripts/: bakeoff.py
tests/fixtures/: make_sample_epub.py  make_sample_pdf.py  sample.epub  sample.gold.json
